--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_CLIENT_URL='mongodb+srv://sapir:zyYRvctRPWhLcHAn@cluster0.xccl7vw.mongodb.net/?retryWrites=true&w=majority'
+MONGO_CLIENT_URL='mongodb+srv://sapir:sapir263@cluster0.yo7jc.mongodb.net/?retryWrites=true&w=majority'
